added key-value + updated ibm

--- a/generic/secrets/security/detected-ibm-cloud-secret.yaml
+++ b/generic/secrets/security/detected-ibm-cloud-secret.yaml
@@ -1,7 +1,7 @@
 rules:
 - id: detected-ibm-cloud-secret
   pattern-regex: |-
-    (("|'|`)?((?i)x)-?((?i)ibm)-?((?i)client)?-?((?i)secret)?_?((?i)id)?("|'|`)?\s{0,60}(:|=>|=)\s{0,60}("|'|`)?[A-Za-z0-9/+=]{40}("|'|`)?)
+    (("|'|`)?((?i)x)-?((?i)ibm)-?((?i)client)?-?((?i)secret)?_?((?i)id)?("|'|`)?\s{0,60}(:|=>|=)\s{0,60}("|'|`)?[A-Za-z0-9\/+=]{30,60}("|'|`)?)
   languages: [regex]
   message: IBM Cloud client secret detected
   severity: ERROR
